RESOLVED FIXED197577
AVFoundation framework isn't always installed
https://bugs.webkit.org/show_bug.cgi?id=197577
Summary AVFoundation framework isn't always installed
Eric Carlson
Reported 2019-05-03 14:15:21 PDT
r244704 broke the AVFoundation availability checks.
Attachments
Patch (8.02 KB, patch)
2019-05-03 14:20 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2019-05-03 14:15:37 PDT
Eric Carlson
Comment 2 2019-05-03 14:20:54 PDT
Jer Noble
Comment 3 2019-05-03 14:22:58 PDT
Comment on attachment 368988 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=368988&action=review r=me. > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:229 > - return PAL::AVFoundationLibrary() && isCoreMediaFrameworkAvailable() && getAVSampleBufferDisplayLayerClass(); > + return isAVFoundationFrameworkAvailable() && isCoreMediaFrameworkAvailable() && getAVSampleBufferDisplayLayerClass(); Why no PAL?
Eric Carlson
Comment 4 2019-05-03 14:27:10 PDT
(In reply to Jer Noble from comment #3) > Comment on attachment 368988 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=368988&action=review > > r=me. > > > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:229 > > - return PAL::AVFoundationLibrary() && isCoreMediaFrameworkAvailable() && getAVSampleBufferDisplayLayerClass(); > > + return isAVFoundationFrameworkAvailable() && isCoreMediaFrameworkAvailable() && getAVSampleBufferDisplayLayerClass(); > > Why no PAL? It won't compile because that file has a "using namespace PAL"
Jer Noble
Comment 5 2019-05-03 14:30:48 PDT
(In reply to Eric Carlson from comment #4) > (In reply to Jer Noble from comment #3) > > Comment on attachment 368988 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=368988&action=review > > > > r=me. > > > > > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:229 > > > - return PAL::AVFoundationLibrary() && isCoreMediaFrameworkAvailable() && getAVSampleBufferDisplayLayerClass(); > > > + return isAVFoundationFrameworkAvailable() && isCoreMediaFrameworkAvailable() && getAVSampleBufferDisplayLayerClass(); > > > > Why no PAL? > > It won't compile because that file has a "using namespace PAL" 👍🏻
WebKit Commit Bot
Comment 6 2019-05-03 14:47:42 PDT
Comment on attachment 368988 [details] Patch Clearing flags on attachment: 368988 Committed r244922: <https://trac.webkit.org/changeset/244922>
WebKit Commit Bot
Comment 7 2019-05-03 14:47:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.